--- a/WEBPROG/package.json
+++ b/WEBPROG/package.json
@@ -11,7 +11,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
-    "mysql2": "^3.3.0",
-    "webprog": "file:"
+    "mysql2": "^3.3.0"
   }
 }
